--- a/azure-webapp-gradle-plugin/build.gradle
+++ b/azure-webapp-gradle-plugin/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-gradle-plugin'
     id 'maven'
+    id 'checkstyle'
 }
 
 group = 'com.microsoft.azure'
@@ -32,4 +33,8 @@ gradlePlugin {
             implementationClass = 'com.microsoft.azure.gradle.webapp.AzureWebappPlugin'
         }
     }
+}
+
+checkstyle {
+  toolVersion = '7.7'
 }
